[package]
name = "shiki-script-runtime"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "script_runtime"

[[bin]]
name = "shiki-script-runtime"
path = "src/bin/shiki-script-runtime.rs"

[dependencies]
# TS→JS コンパイル（型剥がし・禁止構文 lint・source map）。個別 pin（swc メタは荒い）。
swc_common = "23"
swc_ecma_parser = "41"
swc_ecma_ast = "25"
swc_ecma_visit = "25"
swc_ecma_codegen = "28"
swc_ecma_transforms_typescript = "51"
swc_ecma_transforms_base = "45"

# wasmtime 上で QuickJS ゲスト wasm を駆動（fuel/メモリ/epoch 上限）。
wasmtime = "46"

# gRPC over UDS（双方向ストリーム・server/client 両スタブ）。
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3"

[dev-dependencies]
proptest = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }

# prost は tonic 生成コードが使う。swc_ecma_ast は re-export 経由で machete が誤検出。
[package.metadata.cargo-machete]
ignored = ["prost", "swc_ecma_ast"]

[lints]
workspace = true
