[package]
name = "shiki-secrets"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "secrets"

[dependencies]
tracing.workspace = true
shiki-authz.workspace = true
shiki-storage.workspace = true

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }
utoipa.workspace = true
async-trait.workspace = true
# envelope encryption（AES-256-GCM）＋鍵/nonce 生成＋メモリのゼロ化。
aes-gcm = { version = "0.10", features = ["aes", "alloc"] }
rand.workspace = true
zeroize = "1"
base64.workspace = true

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true

# lib 名 authz/storage で参照するため machete が誤検出する。
[package.metadata.cargo-machete]
ignored = ["shiki-authz", "shiki-storage"]

[lints]
workspace = true
