[package]
name = "shiki-workflow-engine"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "workflow_engine"

[[bin]]
name = "export-workflow-ts"
path = "src/bin/export-ts.rs"

[dependencies]
shiki-authz.workspace = true
shiki-artifact.workspace = true
# V6（inline script のコンパイル検証）で script-runtime のコンパイラを共用する。
shiki-script-runtime.workspace = true
# V4（宛先束縛の事前照合）で secrets の host_allowed を共用する。
shiki-secrets.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }
# ワークフロー語彙・IR params 型を単一定義し TS へ生成（codegen が正）。
ts-rs = { workspace = true }
utoipa.workspace = true
# 条件木の matches 演算子（保存時コンパイル検証・バックトラックなし）。
regex = "1"
redis = { workspace = true }
# effect_journal の op_digest（sha256）と http.request の URL ホスト部リテラル抽出。
sha2 = { workspace = true }
url = "2"
# ノード params の content バイト解決（base64 デコード）。
base64 = { workspace = true }
sqlx.workspace = true
shiki-durable.workspace = true
async-trait.workspace = true
tracing.workspace = true
# cron 評価（5 フィールド）＋IANA tz 解決（スケジューラ・engine.md §5）。
cron = "0.15"
chrono = { workspace = true }
chrono-tz = "0.10"
tokio = { workspace = true, features = ["rt", "time", "macros"] }

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
sqlx.workspace = true
proptest.workspace = true

# lib 名 authz/artifact で参照するため machete が誤検出する。
[package.metadata.cargo-machete]
ignored = ["shiki-authz", "shiki-artifact", "shiki-script-runtime", "shiki-durable", "shiki-secrets"]

[lints]
workspace = true
